Refactor single leg control layout and enhance GUI functionality for improved user experience

--- a/单腿控制界面功能说明.md
+++ b/单腿控制界面功能说明.md
@@ -1,73 +1,123 @@
-# 单腿控制界面功能说明
+# 单腿控制界面功能说明（更新版）
 
 ## 功能概述
 本次更新为道岔腿子控制系统添加了单腿控制界面功能，允许用户对单个腿子进行精确控制和监控。
 
 ## 主要功能
 
-### 1. 单腿控制按钮
-- 位置：主界面右上角
+### 1. 单## 界面优化
+- **窗口尺寸增大**：从1200x800增大到1400x900，确保所有按钮完全显示
+- **左侧图表极简**：移除标题文字，只保留核心图形显示
+- **右侧功能分区清晰**：信息→XY控制→Z控制→腿子选择
+- **操作反馈完整**：所有操作都有详细的日志记录
+- **精密控制**：XY轴采用1mm微调，适合精确定位
+- 位置：主界面右上角单独一行
 - 功能：点击打开单腿控制界面
-- 样式：与其他控制按钮保持一致
+- 样式：超大按钮（ExtraLarge），字体24号，突出显示
 
 ### 2. 单腿控制界面布局
+- **窗口尺寸**：1400x900（增大尺寸确保所有元素完整显示）
 - **左侧（60%区域）**：单腿子模型展示
-  - 显示选中腿子的详细信息
-  - 实时显示位置坐标（X, Y, Z）
-  - 显示当前受力状态
+  - 简洁的图形化表示，无冗余标题
+  - 隐藏坐标轴，更加美观简洁
   - 腿子图形化表示（绿色为选中，红色为未选中）
 
 - **右侧（40%区域）**：控制操作区
-  - 上方：十字键控制区域
-  - 下方：腿子选择按钮区域
+  - 上方：腿子状态信息
+  - 中间：XY轴平面控制
+  - 下方：Z轴高度控制
+  - 底部：腿子选择按钮区域
 
-### 3. 十字键控制
+### 3. 腿子状态信息显示
+- 位置：右侧面板上方，单腿控制标题下方
+- 显示内容：
+  - **位置信息**：实时显示选中腿子的(X, Y, Z)坐标
+  - **受力信息**：显示当前受力状态
+- 样式：带边框的信息面板，蓝色位置文字，红色受力文字
+
+### 4. XY轴平面控制
+- 标题：**"XY轴平面控制（±1mm）"**
 - 布局：类似手柄的十字键布局
-- 按钮：上、下、左、右四个方向按钮
+- 按钮功能（精密控制）：
+  - **上(1mm)**：Y轴+1mm
+  - **下(1mm)**：Y轴-1mm
+  - **左(1mm)**：X轴-1mm
+  - **右(1mm)**：X轴+1mm
 - 中心显示：显示当前操作的腿子编号（如"腿子1"）
-- 功能：点击可发送对应方向的移动指令
 
-### 4. 腿子选择
+### 5. Z轴高度控制
+- 标题：**"Z轴高度控制"**
+- 位置：XY轴控制正下方
+- 两个横排按钮：
+  - **Z轴升高(+10mm)**：提升选中腿子10mm
+  - **Z轴降低(-10mm)**：降低选中腿子10mm
+
+### 6. 腿子选择
 - 12个按钮对应腿子1-12
 - 布局：4行3列排列
 - 功能：点击切换选中的腿子
 - 状态指示：选中的腿子按钮高亮显示
 
-### 5. 颜色状态系统
+### 7. 颜色状态系统
 - **红色腿子**：普通状态，未被选中
 - **绿色腿子**：当前选中状态
 - **自动切换**：
   - 选择新腿子时，原腿子变红，新腿子变绿
   - 关闭单腿控制界面后，所有腿子恢复红色
 
-### 6. 主界面图表更新
+### 8. 主界面图表更新
 - XY坐标图中腿子颜色根据选中状态动态更新
 - 新增颜色图例：
   - 红色：普通腿子
   - 绿色：选中腿子
 - 保持与原有中心点、连线等功能的兼容性
 
+## 操作说明
+
+### XY轴控制
+- 每次操作移动±1mm（精密控制）
+- 实时日志记录操作信息
+- 支持上下左右四个方向的微调
+
+### Z轴控制
+- 每次操作移动±10mm
+- 独立的升高/降低按钮
+- 操作精度更高，适合高度调节
+
+## 日志系统
+所有操作都会记录到系统日志中，格式如下：
+- XY轴操作：`"XY轴控制：腿子X 方向(±1mm Y/X轴)"`
+- Z轴操作：`"Z轴控制：腿子X 升高/降低(±10mm Z轴)"`
+
 ## 默认行为
 - 进入单腿控制界面时，默认选中腿子1
 - 腿子1在主界面图表中变为绿色显示
 - 十字键中心显示"腿子1"
+- 右侧信息面板显示腿子1的实时状态
 
 ## 窗口管理
 - 单腿控制界面为独立窗口
 - 支持多次打开（若已存在则置前显示）
 - 关闭窗口时自动恢复所有腿子为红色状态
 
+## 界面优化
+- 左侧图表更简洁，移除冗余文字信息
+- 右侧功能分区明确，操作流程清晰
+- 控制按钮大小适中，便于操作
+- 信息显示实时更新，反馈及时
+
 ## 集成性
 - 与现有系统完全兼容
 - 不影响原有的控制和监控功能
 - 可以与主控制系统同时运行
-- 日志系统完整记录操作信息
+- 完整的错误处理和异常恢复机制
 
 ## 技术实现
 - 使用Tkinter创建独立控制窗口
-- Matplotlib实现单腿详细视图
+- Matplotlib实现简洁的单腿图形显示
 - 实时数据更新机制
-- 状态同步机制确保颜色显示正确
+- 状态同步机制确保颜色和信息显示正确
+- 模块化设计，易于维护和扩展
 
 ## 测试验证
 创建了完整的测试脚本 `test_single_leg_gui.py`，可以独立运行验证所有功能的正确性。
